# FoxDriveApiserver

./: .gitignore  Readme  pyproject.toml
FoxDrive-Data/: Data.db
foxdriveapiserver/: __main__.py  apps.py
foxdriveapiserver/api/: routes.py
foxdriveapiserver/utils/: Consts.py
