[tool.poetry]
name = "foxdriveapiserver"
version = "0.1.0"
description = ""
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
flasgger = "^0.9.5"
colorama = "^0.4.6"
requests = "^2.28.1"
black = "^22.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
